CHANGES
=======

* first asyncssh implementation and flags
* pre-commit hooks CI autoupdate
* file error on merge\_final\_bams
* file error on merge\_final\_bams
* file error on merge\_final\_bams
* file error on merge\_final\_bams
* using perl to check if bam is sorted
* changing logic on checking bam if sorted

v3.1.5
------

* updating conda env for pod5 (needs recent gcc)
* [pre-commit] Fixes from hooks
* extracting model from modified json file
* extracting model from modified json file
* extracting model from modified json file
* extracting model from modified json file
* pre-commit hooks CI autoupdate

v3.1.4
------

* grep logic working
* [pre-commit] Fixes from hooks
* pycoqc
* check sort order
* cleanup
* make transfer wait for modbed
* do\_modbed boolean
* final fixes modbed
* fix tabix
* rm all benchmarks
* cleanup modkit env
* modbed into 2 rules
* tabix missing in modkit env
* [pre-commit] Fixes from hooks
* barcode enabled pipeline
* Changelog
* rsync better than mv
* one flag
* prepare bam working
* rule all
* first sample wildcard implementation
* Changelog
* renaming working
* ChangeLog
* rename glob
* [pre-commit] Fixes from hooks
* RNA modification: Mode active
* pod5 email
* [pre-commit] Fixes from hooks
* Force a directory to be ran as a flow cell
* pre-commit hooks CI autoupdate

v2.1.4
------

* removed intermediate bamlist txt files
* intermediate bam file removal
* merge bam pass and fail into a single bam file
* using org.label
* [pre-commit] Fixes from hooks
* Deprecated 'get\_organism\_name' function and changed the way to get organism name

v2.1.3
------

* used {threads} instead of hardcodding
* another bug fixed
* fixed bug
* [pre-commit] Fixes from hooks
* pre-commit hooks CI autoupdate
* [pre-commit] Fixes from hooks
* Fixed a bug in 06\_align.smk where if the bam file is not sorted to sort it
* Fixed another location where the PIs 2 last names is causing problems
* Fixing a bug with PIs 2 last name, from a different location